:bug: fix(pagi): align-center

--- a/styles/pagination.styl
+++ b/styles/pagination.styl
@@ -10,6 +10,7 @@
 		border-radius 2px
 		display inline-flex
 		justify-content center
+		align-items center
 		margin 0 4px
 		cursor pointer
 		transition color .2s
